# cursorclone

./: .dockerignore  .env.example  .gitignore  .gitleaksignore  .trivyignore  AGENTS.md  LICENSE.md  Makefile  Makefile.dev  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.vllm-cpu.yml  docker-compose.vllm.yml  docker-compose.webide.yml  docker-compose.yml  package.json  pnpm-lock.yaml
apps/api/: .env.sample  Dockerfile  alembic.ini  package.json  pyproject.toml  requirements-dev.txt  requirements.txt
apps/api/migrations/: README.md  env.py
apps/api/migrations/versions/: 2026_01_03_0001-initial_schema.py  2026_01_03_0002-add_2fa_fields.py  2026_01_07_0206-97af3d80270c_add_projects_table_and_workspace_.py  2026_01_07_2201-7c8a3b1f0e3a_add_project_description.py  2026_01_08_0001-add_workspace_file_index_and_symbols.py
apps/api/src/: config.py  main.py  models.py
apps/api/src/context_builder/: __init__.py  builder.py  collector.py  models.py  security.py  (+1 more)
apps/api/tests/: conftest.py  locustfile.py  test_ai_gateway.py  test_audit_service.py  test_auth_features.py  test_code_server_heavy_artifacts.py  test_config.py  test_container_api.py  test_context_builder.py  test_diff_utils.py  test_embedding_offline.py  test_filesystem.py  test_gateway_jwks.py  test_ide.py  test_ide_android_sdk_mount.py  test_ide_offline_extensions.py  test_ide_opencode_cli_mount.py  test_integration.py  test_llm_client.py  test_onprem_chat_panel_extension_artifacts.py  test_rag_v1_internal_auth.py  test_rbac.py  test_workspace_delete.py  test_workspace_manager.py
(+334 files in other folders)
