[project]
name = "poc-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.27.0",
  "pydantic>=2.6.0",
  "python-multipart>=0.0.9",
  "jinja2>=3.1.0",
  "httpx>=0.27.0",
  "python-dotenv>=0.13.0",
]

[project.optional-dependencies]
test = [
  "pytest>=7.4.0",
  "pytest-asyncio>=0.21.0",
  "pytest-cov>=4.1.0",
  "pytest-xdist>=3.5.0",
  "httpx>=0.27.0",
]

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
markers = [
  "integration: 통합 테스트 (DB 연결 필요)",
  "slow: 느린 테스트",
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
  "*/tests/*",
  "*/__pycache__/*",
  "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
]
show_missing = true
fail_under = 50